--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.52.0",
-    "@types/node": "^22.15.15",
-    "is-even-check-new": "^1.0.1",
     "@faker-js/faker": "^9.8.0",
-    "dotenv": "^16.6.1"
+    "@playwright/test": "^1.53.2",
+    "@types/node": "^22.15.15",
+    "dotenv": "^16.6.1",
+    "is-even-check-new": "^1.0.1"
   }
 }
