--- a/.github/workflows/run-api-tests.yaml
+++ b/.github/workflows/run-api-tests.yaml
@@ -1,9 +1,13 @@
 name: Run API Tests
+
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
+  schedule:
+    - cron: "0 3 * * *"
+
 jobs:
   test:
     timeout-minutes: 60
