feat: Add base_url input to API tests workflow for customizable test environment

--- a/.github/workflows/run-api-tests.yaml
+++ b/.github/workflows/run-api-tests.yaml
@@ -8,6 +8,11 @@ on:
         type: number
         default: 3
 
+      base_url:
+        description: "Base url for environment where tests will be executed"
+        type: string
+        default: https://conduit-api.learnwebdriverio.com
+
 jobs:
   test:
     timeout-minutes: 60
