--- a/.github/workflows/run-api-tests.yaml
+++ b/.github/workflows/run-api-tests.yaml
@@ -18,7 +18,10 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     env:
+      WORKERS_COUNT: 3
+      BASE_URL: https://conduit-api.learnwebdriverio.com
       CONDULIT_DEFAULT_PASSWORD: ${{ secrets.CONDULIT_DEFAULT_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
