--- a/.github/workflows/run-api-tests.yaml
+++ b/.github/workflows/run-api-tests.yaml
@@ -21,6 +21,7 @@ jobs:
       WORKERS_COUNT: ${{ inputs.workers_count }}
       BASE_URL: ${{ inputs.base_url }}
       CONDULIT_DEFAULT_PASSWORD: ${{ secrets.CONDULIT_DEFAULT_PASSWORD }}
+      OTHER_PASSWORD: ${{ vars.OTHER_PASSWORD }}
 
     steps:
       - uses: actions/checkout@v4
@@ -31,6 +32,7 @@ jobs:
         run: npm ci
       - name: Run Playwright tests
         run: npx playwright test --project=api
+
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
